<resources>
    <string name="app_name">MyApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_text">TextActivity</string>


    <string name="Done">Done</string>
    <string name="Customized">Customized</string>
    <string name="Decorator">Decorator</string>
    <string name="Hebrew">Hebrew</string>
    <string name="Arabic">Arabic</string>
    <string name="CustomView">Custom View</string>
    <string name="Dialog">Dialog</string>
    <string name="DisplayOnly">DisplayOnly</string>
    <string name="Range">Range</string>
    <string name="Multi">Multi</string>
    <string name="Single">Single</string>


    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string-array name="citys">
        <item>厦门</item>
        <item>深圳</item>
        <item>上海</item>
        <item>广州</item>
        <item>北京</item>
    </string-array>

</resources>
