<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:scrollbarStyle="outsideInset">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/button_single"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Single"
                android:enabled="false"/>

            <Button
                android:id="@+id/button_multi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Multi"/>

            <Button
                android:id="@+id/button_range"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Range"/>

            <Button
                android:id="@+id/button_display_only"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/DisplayOnly"/>

            <Button
                android:id="@+id/button_dialog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Dialog"/>

            <Button
                android:id="@+id/button_customized"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Customized"/>

            <Button
                android:id="@+id/button_decorator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Decorator"/>

            <Button
                android:id="@+id/button_hebrew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Hebrew"/>

            <Button
                android:id="@+id/button_arabic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Arabic"/>

            <Button
                android:id="@+id/button_custom_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CustomView"/>
        </LinearLayout>
    </HorizontalScrollView>

    <com.squareup.timessquare.CalendarPickerView
        android:id="@+id/calendar_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingBottom="16dp"
        android:scrollbarStyle="outsideOverlay"
        android:clipToPadding="false"
        android:background="@color/custom_background"
        app:tsquare_dayBackground="@drawable/custom_calendar_bg_selector"
        app:tsquare_dayTextColor="@color/custom_calendar_text_selector"
        app:tsquare_dividerColor="@color/transparent"
        app:tsquare_titleTextColor="@color/custom_calendar_text_selector"
        app:tsquare_headerTextColor="@color/custom_header_text"
        />
    <Button
        android:id="@+id/done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        />
</LinearLayout>
